--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -32,6 +32,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 
   &:hover {
     color: $hover-button;
